[gd_scene load_steps=7 format=3 uid="uid://4stpcb72rks0"]

[ext_resource type="Script" uid="uid://orsjn0r1d61u" path="res://entities/pieces/_base_pieces/piece.gd" id="1_m7oub"]
[ext_resource type="PackedScene" uid="uid://v1xmai71imsv" path="res://entities/pieces/_components/visuals_component.tscn" id="2_mccw4"]
[ext_resource type="Script" uid="uid://hud2tqdvqysw" path="res://entities/pieces/_components/movement_component.gd" id="4_54wly"]
[ext_resource type="PackedScene" uid="uid://fkqpt5w4tjhq" path="res://entities/pieces/_components/state_machine/state_machine.tscn" id="5_7j38n"]
[ext_resource type="Script" uid="uid://b7mlauncabyke" path="res://entities/pieces/_components/stats_component.gd" id="5_gbxwr"]
[ext_resource type="Script" uid="uid://b6feeqgteiaba" path="res://entities/pieces/_components/modifiers_component.gd" id="6_drro1"]

[node name="Piece" type="Node3D" node_paths=PackedStringArray("visuals", "movement", "stats", "modifiers", "state_machine") groups=["piece"]]
script = ExtResource("1_m7oub")
visuals = NodePath("VisualsComponent")
movement = NodePath("MovementComponent")
stats = NodePath("StatsComponent")
modifiers = NodePath("ModifiersComponent")
state_machine = NodePath("StateMachine")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_54wly")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("5_gbxwr")

[node name="ModifiersComponent" type="Node" parent="."]
script = ExtResource("6_drro1")

[node name="StateMachine" parent="." instance=ExtResource("5_7j38n")]

[node name="VisualsComponent" parent="." instance=ExtResource("2_mccw4")]
